integrations/salesforce/agentforce-poc/force-app/main/default/objects/CostPilot_Test_Run__c/CostPilot_Test_Run__c.object-meta.xml
<CustomObject>
    <description>Tracks bounded Salesforce sandbox traffic generated through CostPilot.</description>
    <label>CostPilot Test Run</label>
    <nameField>
        <displayFormat>CPR-{0000}</displayFormat>
        <label>Run Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CostPilot Test Runs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>