integrations/salesforce/agentforce-poc/force-app/main/default/objects/CostPilot_Test_Run__c/fields/Agent_Name__c.field-meta.xml
<CustomField><fullName>Agent_Name__c</fullName><label>Agent Name</label><length>200</length><required>true</required><type>Text</type></CustomField>