integrations/salesforce/agentforce-poc/force-app/main/default/objects/CostPilot_Test_Run__c/fields/Attribution_User__c.field-meta.xml
<CustomField><fullName>Attribution_User__c</fullName><deleteConstraint>SetNull</deleteConstraint><label>Attribution User</label><referenceTo>User</referenceTo><relationshipLabel>CostPilot Test Runs</relationshipLabel><relationshipName>CostPilot_Test_Runs</relationshipName><required>false</required><type>Lookup</type></CustomField>