integrations/salesforce/agentforce-poc/force-app/main/default/objects/CostPilot_Test_Run__c/fields/Failed_Calls__c.field-meta.xml
<CustomField><fullName>Failed_Calls__c</fullName><defaultValue>0</defaultValue><label>Failed Calls</label><precision>3</precision><required>true</required><scale>0</scale><type>Number</type></CustomField>