integrations/salesforce/agentforce-poc/force-app/main/default/objects/CostPilot_Test_Run__c/fields/Last_Error__c.field-meta.xml
<CustomField><fullName>Last_Error__c</fullName><label>Last Error</label><length>32768</length><visibleLines>3</visibleLines><type>LongTextArea</type></CustomField>