integrations/salesforce/agentforce-poc/force-app/main/default/objects/CostPilot_Test_Run__c/fields/Mode__c.field-meta.xml
<CustomField><fullName>Mode__c</fullName><label>Mode</label><length>20</length><required>true</required><type>Text</type></CustomField>