integrations/salesforce/agentforce-poc/force-app/main/default/objects/CostPilot_Test_Run__c/fields/Routing_Mix__c.field-meta.xml
<CustomField><fullName>Routing_Mix__c</fullName><label>Routing Mix</label><length>40</length><required>true</required><type>Text</type></CustomField>