integrations/salesforce/agentforce-poc/force-app/main/default/objects/CostPilot_Test_Run__c/fields/Source_Object__c.field-meta.xml
<CustomField><fullName>Source_Object__c</fullName><label>Source Object</label><length>80</length><required>true</required><type>Text</type></CustomField>