integrations/salesforce/agentforce-poc/force-app/main/default/objects/CostPilot_Test_Run__c/fields/Source_Record_Id__c.field-meta.xml
<CustomField><fullName>Source_Record_Id__c</fullName><externalId>false</externalId><label>Source Record ID</label><length>18</length><required>true</required><type>Text</type><unique>false</unique></CustomField>