integrations/salesforce/agentforce-poc/force-app/main/default/objects/CostPilot_Test_Run__c/fields/Source_Record_Name__c.field-meta.xml
<CustomField><fullName>Source_Record_Name__c</fullName><label>Source Record Name</label><length>255</length><type>Text</type></CustomField>