integrations/salesforce/agentforce-poc/force-app/main/default/objects/CostPilot_Test_Run__c/fields/Stop_Requested__c.field-meta.xml
<CustomField><fullName>Stop_Requested__c</fullName><defaultValue>false</defaultValue><label>Stop Requested</label><type>Checkbox</type></CustomField>