integrations/salesforce/agentforce-poc/force-app/main/default/objects/CostPilot_Test_Run__c/fields/Total_Calls__c.field-meta.xml
<CustomField><fullName>Total_Calls__c</fullName><label>Total Calls</label><precision>3</precision><required>true</required><scale>0</scale><type>Number</type></CustomField>